[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pypi-multidl"
authors = [{name = "Rasmus Bondesson", email = "raek@raek.se"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "packaging",
    "requests",
]
dynamic = ["version", "description"]

[project.urls]
GitHub = "https://github.com/raek/pypi-multidl/"

[project.scripts]
pypi-multidl = "pypi_multidl:main"
